--- a/ts_stylesheet.css
+++ b/ts_stylesheet.css
@@ -15,7 +15,10 @@ body {
   width: 50%;
 }
 
-input[t] {
-  background-color: 'gray'
-  border-radius: 10px;
+input[type=text] {
+    background-color: gainsboro;
+    border-radius: 20px;
+    color: gray;
+    border-width: 0;
+    padding: 5px;
 }
