--- a/ts_stylesheet.css
+++ b/ts_stylesheet.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  font-family: 'Arial';
+  font-family: Roboto;
   padding: .5em;
 }
 
@@ -20,5 +20,16 @@ input[type=text] {
     border-radius: 20px;
     color: gray;
     border-width: 0;
-    padding: 5px;
+    padding: 7px;
+    padding-left: 20px;
+    margin-bottom: 10px;
+    width: 45%;
+}
+
+#add {
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  border-width: 0;
+  font-size: 25px;
 }
