--- a/ts_stylesheet.css
+++ b/ts_stylesheet.css
@@ -33,3 +33,15 @@ input[type=text] {
   border-width: 0;
   font-size: 25px;
 }
+
+#bell {
+  background-color: gray;
+  width: 30px;
+  height: 30px;
+  border-radius: 15px;
+}
+
+#top {
+  position: absolute;
+  right: 10px;
+}
