--- a/ts_stylesheet.css
+++ b/ts_stylesheet.css
@@ -1,11 +1,13 @@
 #logo {
   width: 25%;
-  padding-top: 3.5em;
+  padding-top: 8em;
+  padding-bottom: 1em;
 }
 
 body {
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
   padding: .5em;
+  color: gray;
 }
 
 .center {
@@ -16,14 +18,16 @@ body {
 }
 
 input[type=text] {
-    background-color: gainsboro;
-    border-radius: 20px;
-    color: gray;
+    background-color: #eeeeee;
+    border-radius: 25px;
     border-width: 0;
     padding: 7px;
     padding-left: 20px;
     margin-bottom: 10px;
     width: 45%;
+    font-size: .85em;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 #add {
@@ -32,4 +36,52 @@ input[type=text] {
   border-radius: 25px;
   border-width: 0;
   font-size: 25px;
+  margin-top: 2em;
+  background-color: #eeeeee;
+}
+
+#bell {
+  background-color: gray;
+  width: 30px;
+  height: 30px;
+  border-radius: 15px;
+}
+
+#topbar {
+  display: block;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+ul {
+  list-style-type: none;
+  float: right;
+  font-size: .9em;
+
+}
+
+li {
+  display: inline;
+  padding-right: 10px
+}
+
+#shortcut {
+  display: block;
+  font-size: .7em;
+  margin-top: 18px;
+}
+
+#settings {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  color: black;
+}
+
+#add_button {
+  background-color: white;
+  width: 20%;
+  border-width: 0;
+  border-radius: 20px
 }
